<resources>
    <string name="app_name">SHPE APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SHPE</string>
    <string name="nav_header_subtitle">University of Houston</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_about">About</string>
    <string name="menu_events">Events</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Home</string>
    <string name="menu_join">Join</string>
    <string name="menu_members">Members</string>
    <string name="menu_resources">Resources</string>
    <string name="menu_sponsors">Sponsors</string>
</resources>