<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.shpeapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.shpeapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.shpeapp.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.shpeapp.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_members"
        android:name="com.example.shpeapp.ui.members.MembersFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_members" />

    <fragment
        android:id="@+id/nav_resources"
        android:name="com.example.shpeapp.ui.resources.ResourcesFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_resources" />
    <fragment
        android:id="@+id/nav_join"
        android:name="com.example.shpeapp.ui.join.JoinFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_join" />

    <fragment
        android:id="@+id/nav_sponsors"
        android:name="com.example.shpeapp.ui.sponsors.SponsorsFragment"
        android:label="@string/menu_sponsors"
        tools:layout="@layout/fragment_sponsors" />
</navigation>
